--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-15 15:53+0100\n"
+"POT-Creation-Date: 2024-04-16 10:13+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -56,14 +56,18 @@ msgstr ""
 " Tystysgrif Cydnabod Rhywedd?"
 
 #: grc/business_logic/constants.py:17
+msgid "We’ve resent you a security code. This can take a few minutes to arrive"
+msgstr ""
+
+#: grc/business_logic/constants.py:20
 msgid "Select if you have ever changed your name to reflect your gender"
 msgstr ""
 
-#: grc/business_logic/constants.py:18
+#: grc/business_logic/constants.py:21
 msgid "Select if you are currently married or in a civil partnership"
 msgstr "Dewiswch os ydych chi'n briod neu mewn partneriaeth sifil ar hyn o bryd"
 
-#: grc/business_logic/constants.py:19
+#: grc/business_logic/constants.py:22
 msgid ""
 "Select if you have ever been married or in a civil partnership where your"
 " spouse or partner died"
@@ -71,7 +75,7 @@ msgstr ""
 "Dewiswch os ydych chi erioed wedi bod yn briod neu mewn partneriaeth "
 "sifil pan fu farw eich priod neu'ch partner"
 
-#: grc/business_logic/constants.py:21
+#: grc/business_logic/constants.py:24
 msgid ""
 "Select if you have ever been married or in a civil partnership that has "
 "ended"
@@ -79,7 +83,7 @@ msgstr ""
 "Dewiswch os ydych chi erioed wedi bod yn briod neu mewn partneriaeth "
 "sifil sydd wedi dod i ben"
 
-#: grc/business_logic/constants.py:23
+#: grc/business_logic/constants.py:26
 msgid ""
 "Select if you have received gender recognition in one of these countries "
 "or territories"
@@ -87,7 +91,7 @@ msgstr ""
 "Dewiswch os ydych chi wedi cael cydnabyddiaeth rhywedd yn un o'r gwledydd"
 " neu'r tiriogaethau hyn"
 
-#: grc/business_logic/constants.py:25
+#: grc/business_logic/constants.py:28
 msgid ""
 "Select if you plan to remain married after receiving your Gender "
 "Recognition Certificate"
@@ -95,13 +99,21 @@ msgstr ""
 "Dewiswch os ydych chi’n bwriadu aros yn briod ar ôl cael eich Tystysgrif "
 "Cydnabod Rhywedd"
 
-#: grc/business_logic/constants.py:27
+#: grc/business_logic/constants.py:30
 msgid "Enter your email address"
 msgstr "Nodwch eich cyfeiriad e-bost"
 
-#: grc/business_logic/constants.py:28
+#: grc/business_logic/constants.py:31
 msgid "Enter a valid email address"
 msgstr "Nodwch gyfeiriad e-bost dilys"
+
+#: grc/business_logic/constants.py:32
+msgid "Enter a security code"
+msgstr "Nodwch god diogelwch"
+
+#: grc/business_logic/constants.py:33
+msgid "Enter the security code that we emailed you"
+msgstr "Nodwch y cod diogelwch y gwnaethom anfon atoch trwy e-bost"
 
 #: grc/document_checker/constants.py:7
 msgid "Statutory declaration for applicants who are married"
@@ -200,8 +212,8 @@ msgid "Invalid email address."
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:98
-#: grc/utils/form_custom_validators.py:424
-#: grc/utils/form_custom_validators.py:443
+#: grc/utils/form_custom_validators.py:425
+#: grc/utils/form_custom_validators.py:444
 msgid "File does not have an approved extension: {extensions}"
 msgstr ""
 
@@ -212,6 +224,42 @@ msgstr ""
 #: grc/templates/base.html:66
 msgid "Apply for a Gender Recognition Certificate"
 msgstr "Gwneud cais am Dystysgrif Cydnabod Rhywedd"
+
+#: grc/templates/security-code.html:7 grc/templates/security-code.html:20
+msgid "Enter security code"
+msgstr "Rhowch cod diogelwch"
+
+#: grc/templates/security-code.html:24
+msgid "We’ve sent a security code to"
+msgstr "Rydym wedi anfon cod diogelwch i"
+
+#: grc/templates/security-code.html:27
+msgid "This can take a few minutes to arrive"
+msgstr "Gall gymryd ychydig o funudau i gyrraedd"
+
+#: grc/templates/security-code.html:30
+msgid "If you do not get an email"
+msgstr "Os na fyddwch yn cael y neges e-bost"
+
+#: grc/templates/security-code.html:33
+msgid "check your spam or junk folder"
+msgstr "gwiriwch eich ffolder spam neu sothach"
+
+#: grc/templates/security-code.html:34
+msgid "check you have entered the correct email"
+msgstr "sicrhewch eich bod wedi rhoi y cyfeiriad e-bost cywir"
+
+#: grc/templates/security-code.html:37
+msgid "If it's still not there, we can"
+msgstr "Os ydych dal heb gael y neges e-bost, "
+
+#: grc/templates/security-code.html:39
+msgid "resend the email"
+msgstr "gallwn ei hanfon eto"
+
+#: grc/templates/security-code.html:51
+msgid "Security code"
+msgstr "Cod diogelwch"
 
 #: grc/templates/document-checker/currently_in_a_partnership.html:7
 #: grc/templates/document-checker/currently_in_a_partnership.html:25
