--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-16 15:27+0100\n"
+"POT-Creation-Date: 2024-04-17 09:34+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -224,8 +224,8 @@ msgid "Invalid email address."
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:87
-#: grc/utils/form_custom_validators.py:435
-#: grc/utils/form_custom_validators.py:454
+#: grc/utils/form_custom_validators.py:434
+#: grc/utils/form_custom_validators.py:453
 msgid "File does not have an approved extension: {extensions}"
 msgstr ""
 
@@ -321,6 +321,7 @@ msgstr ""
 #: grc/templates/document-checker/email-address.html:42
 #: grc/templates/document-checker/start.html:33
 #: grc/templates/govuk-design-system-templates/continue.html:4
+#: grc/templates/start-application/reference-number.html:32
 msgid "Continue"
 msgstr "Parhau"
 
@@ -2268,4 +2269,25 @@ msgstr "Bydd angen i chi ddechrau cais newydd"
 #: grc/templates/start-application/is-first-visit.html:40
 msgid "Reference number"
 msgstr "Cyfeirnod"
+
+#: grc/templates/start-application/reference-number.html:5
+#: grc/templates/start-application/reference-number.html:16
+msgid "Your reference number"
+msgstr "Eich cyfeirnod"
+
+#: grc/templates/start-application/reference-number.html:20
+msgid "We will automatically save your application as you progress"
+msgstr "Byddwn yn cadw eich cais yn awtomatig wrth i chi ei gwblhau"
+
+#: grc/templates/start-application/reference-number.html:23
+msgid "Your reference number is"
+msgstr "Eich cyfeirnod yw"
+
+#: grc/templates/start-application/reference-number.html:27
+msgid "You will need your reference number to return to your application"
+msgstr "Byddwch angen eich cyfeirnod i ddychwelyd i’ch cais"
+
+#: grc/templates/start-application/reference-number.html:28
+msgid "Keep a record of it – it can't be recovered if you lose it"
+msgstr "Cadwch gofnod ohono - ni allwch ei gael yn ôl os byddwch yn ei golli"
 
