--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-17 13:31+0100\n"
+"POT-Creation-Date: 2024-04-17 14:33+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -115,6 +115,10 @@ msgstr ""
 
 #: grc/business_logic/constants.py:37
 msgid "Select if you ever been issued a Gender Recognition Certificate"
+msgstr ""
+
+#: grc/business_logic/constants.py:38
+msgid "You must consent to the General Register Office contacting you"
 msgstr ""
 
 #: grc/document_checker/constants.py:7
@@ -1932,6 +1936,42 @@ msgstr ""
 
 #: grc/templates/policies/privacy-policy.html:195
 msgid "You can contact the Information Commissioner at:"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:7
+#: grc/templates/start-application/declaration.html:20
+msgid "Notifying the General Register Office"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:24
+msgid ""
+"If you were born in the UK, the Gender Recognition Panel will tell the "
+"relevant General Register Office about your application"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:27
+msgid ""
+"This will include telling them if you are married or in a civil "
+"partnership registered in England and Wales or Scotland and you are "
+"applying for gender recognition while remaining married or in a civil "
+"partnership"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:30
+msgid ""
+"After you receive your certificate, the General Register Office will "
+"contact you about your new birth certificate and, if appropriate, a new "
+"certificate for your marriage or civil partnership"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:39
+msgid ""
+"Do you consent to the General Register Office contacting you about your "
+"application?"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:40
+msgid "I consent"
 msgstr ""
 
 #: grc/templates/start-application/email-address.html:6
