--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-17 13:31+0100\n"
+"POT-Creation-Date: 2024-04-17 14:33+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -130,6 +130,10 @@ msgstr "Nodwch gyfeirnod dilys"
 #: grc/business_logic/constants.py:37
 msgid "Select if you ever been issued a Gender Recognition Certificate"
 msgstr "Dewiswch a roddwyd Tystysgrif Cydnabod Rhywedd ichi erioed"
+
+#: grc/business_logic/constants.py:38
+msgid "You must consent to the General Register Office contacting you"
+msgstr "Rhaid i chi roi caniatâd i’r Swyddfa Gofrestru Gyffredinol gysylltu â chi"
 
 #: grc/document_checker/constants.py:7
 msgid "Statutory declaration for applicants who are married"
@@ -2210,6 +2214,51 @@ msgstr ""
 #: grc/templates/policies/privacy-policy.html:195
 msgid "You can contact the Information Commissioner at:"
 msgstr "Gallwch gysylltu â’r Comisiynydd Gwybodaeth yn:"
+
+#: grc/templates/start-application/declaration.html:7
+#: grc/templates/start-application/declaration.html:20
+msgid "Notifying the General Register Office"
+msgstr "Hysbysu’r Swyddfa Gofrestru Gyffredinol"
+
+#: grc/templates/start-application/declaration.html:24
+msgid ""
+"If you were born in the UK, the Gender Recognition Panel will tell the "
+"relevant General Register Office about your application"
+msgstr ""
+"Os cawsoch eich geni yn y DU, bydd y Panel Cydnabod Rhywedd yn hysbysu’r "
+"Swyddfa Gofrestru Gyffredinol berthnasol am eich cais"
+
+#: grc/templates/start-application/declaration.html:27
+msgid ""
+"This will include telling them if you are married or in a civil "
+"partnership registered in England and Wales or Scotland and you are "
+"applying for gender recognition while remaining married or in a civil "
+"partnership"
+msgstr ""
+"Bydd hyn yn cynnwys dweud wrthynt os ydych wedi priodi neu mewn "
+"partneriaeth sifil sydd wedi’i chofrestru yng Nghymru a Lloegr neu’r "
+"Alban a’ch bod yn gwneud cais am gydnabod rhywedd tra rydych yn briod neu"
+" mewn partneriaeth sifil"
+
+#: grc/templates/start-application/declaration.html:30
+msgid ""
+"After you receive your certificate, the General Register Office will "
+"contact you about your new birth certificate and, if appropriate, a new "
+"certificate for your marriage or civil partnership"
+msgstr ""
+"Ar ôl i chi gael eich tystysgrif, bydd y Swyddfa Gofrestru Gyffredinol yn"
+" cysylltu â chi ynghylch eich tystysgrif geni newydd ac, os yw’n "
+"berthnasol, tystysgrif priodas neu dystysgrif partneriaeth sifil newydd"
+
+#: grc/templates/start-application/declaration.html:39
+msgid ""
+"Do you consent to the General Register Office contacting you about your "
+"application?"
+msgstr ""
+
+#: grc/templates/start-application/declaration.html:40
+msgid "I consent"
+msgstr ""
 
 #: grc/templates/start-application/email-address.html:6
 #: grc/templates/start-application/email-address.html:15
