--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-17 13:31+0100\n"
+"POT-Creation-Date: 2024-04-17 14:51+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -128,7 +128,7 @@ msgid "Enter a valid reference number"
 msgstr "Nodwch gyfeirnod dilys"
 
 #: grc/business_logic/constants.py:37
-msgid "Select if you ever been issued a Gender Recognition Certificate"
+msgid "Select if you have ever been issued a Gender Recognition Certificate"
 msgstr "Dewiswch a roddwyd Tystysgrif Cydnabod Rhywedd ichi erioed"
 
 #: grc/document_checker/constants.py:7
