--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-17 13:31+0100\n"
+"POT-Creation-Date: 2024-04-17 14:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,7 +114,7 @@ msgid "Enter a valid reference number"
 msgstr ""
 
 #: grc/business_logic/constants.py:37
-msgid "Select if you ever been issued a Gender Recognition Certificate"
+msgid "Select if you have ever been issued a Gender Recognition Certificate"
 msgstr ""
 
 #: grc/document_checker/constants.py:7
