--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-04-17 14:33+0100\n"
+"POT-Creation-Date: 2024-04-18 10:29+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -18,6 +18,30 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.12.0\n"
+
+#: grc/list_status.py:6
+msgid "COMPLETED"
+msgstr ""
+
+#: grc/list_status.py:7
+msgid "IN PROGRESS"
+msgstr "YN MYND RHAGDDO"
+
+#: grc/list_status.py:8
+msgid "NOT STARTED"
+msgstr "HEB DDECHRAU"
+
+#: grc/list_status.py:9
+msgid "CANNOT START YET"
+msgstr "METHU DECHRAU ETO"
+
+#: grc/list_status.py:10
+msgid "IN REVIEW"
+msgstr ""
+
+#: grc/list_status.py:11
+msgid "ERROR"
+msgstr ""
 
 #: grc/business_logic/constants.py:5 grc/templates/policies/cookies.html:114
 msgid "Yes"
@@ -288,6 +312,125 @@ msgstr "gallwn ei hanfon eto"
 #: grc/templates/security-code.html:51
 msgid "Security code"
 msgstr "Cod diogelwch"
+
+#: grc/templates/task-list.html:4 grc/templates/task-list.html:31
+msgid "Your application"
+msgstr "Eich cais"
+
+#: grc/templates/task-list.html:38
+msgid ""
+"This is where you can provide your personal details and upload your "
+"documents"
+msgstr ""
+"Dyma lle gallwch ddarparu eich manylion personol ac uwchlwytho eich "
+"dogfennau"
+
+#: grc/templates/task-list.html:41 grc/templates/task-list.html:196
+msgid "Your application is saved automatically as you progress"
+msgstr "Bydd eich cais yn cael ei gadw’n awtomatig wrth i chi ei gwblhau"
+
+#: grc/templates/task-list.html:42
+msgid "You can"
+msgstr "Gallwch"
+
+#: grc/templates/task-list.html:44
+msgid "save and exit"
+msgstr "gadw’ch cais"
+
+#: grc/templates/task-list.html:46
+msgid "at any time and return to your application later"
+msgstr "ar unrhyw adeg a dychwelyd ato yn hwyrach ymlaen"
+
+#: grc/templates/task-list.html:51
+msgid ""
+"You can upload most documents online, but you will need to post us your "
+"birth or adoption certificate"
+msgstr ""
+"Gallwch uwchlwytho’r rhan fwyaf o ddogfennau ar-lein, ond bydd angen i "
+"chi bostio’ch tystysgrif geni neu dystysgrif mabwysiadu atom"
+
+#: grc/templates/task-list.html:55
+msgid ""
+"What you need to upload depends on the information you provide during "
+"your application"
+msgstr ""
+"Mae beth fydd angen i chi ei uwchlwytho yn dibynnu ar yr wybodaeth a "
+"ddarperir gennych yn ystod eich cais"
+
+#: grc/templates/document-checker/start.html:3
+#: grc/templates/document-checker/start.html:10 grc/templates/task-list.html:62
+msgid "Before you start"
+msgstr "Cyn i chi ddechrau"
+
+#: grc/templates/task-list.html:67
+msgid "Confirmation"
+msgstr "Cadarnhau"
+
+#: grc/templates/task-list.html:77
+msgid "Fill in your details"
+msgstr "Rhoi eich manylion"
+
+#: grc/templates/task-list.html:82
+msgid "Your personal details"
+msgstr "Eich manylion personol"
+
+#: grc/templates/task-list.html:90
+msgid "Your birth registration information"
+msgstr "Gwybodaeth am gofrestru eich genedigaeth"
+
+#: grc/templates/task-list.html:98
+msgid "Marriage or civil partnership details"
+msgstr "Manylion eich priodas neu bartneriaeth sifil"
+
+#: grc/templates/task-list.html:111
+msgid "Upload your documents"
+msgstr "Uwchlwytho eich dogfennau"
+
+#: grc/templates/task-list.html:117
+msgid "Your medical reports"
+msgstr "Eich adroddiadau meddygol"
+
+#: grc/templates/task-list.html:125
+msgid "Evidence of living in your gender"
+msgstr "Tystiolaeth o fyw yn eich rhywedd"
+
+#: grc/templates/task-list.html:133
+msgid "Name change documents"
+msgstr "Dogfennau newid enw"
+
+#: grc/templates/task-list.html:141
+msgid "Marriage and civil partnership documents"
+msgstr ""
+
+#: grc/templates/task-list.html:149
+msgid "Overseas certificate documents"
+msgstr ""
+
+#: grc/templates/task-list.html:156
+msgid "Statutory declarations"
+msgstr "Datganiadau statudol"
+
+#: grc/templates/task-list.html:167
+msgid "Apply"
+msgstr "Gwneud cais"
+
+#: grc/templates/task-list.html:173
+msgid "Once you have completed the other sections you can submit your application"
+msgstr ""
+"Unwaith y byddwch wedi cwblhau’r adrannau eraill gallwch gyflwyno eich "
+"cais"
+
+#: grc/templates/task-list.html:177
+msgid "Submit and pay"
+msgstr "Cyflwyno a thalu"
+
+#: grc/templates/task-list.html:193
+msgid "Returning to your application"
+msgstr "Dychwelyd i’ch cais"
+
+#: grc/templates/task-list.html:200
+msgid "Exit and return later"
+msgstr "Gadael a dychwelyd yn hwyrach ymlaen"
 
 #: grc/templates/document-checker/currently_in_a_partnership.html:7
 #: grc/templates/document-checker/currently_in_a_partnership.html:25
@@ -594,11 +737,6 @@ msgid ""
 msgstr ""
 "Ydych chi erioed wedi bod mewn partneriaeth sifil neu briodas a ddaeth i "
 "ben am reswm arall?"
-
-#: grc/templates/document-checker/start.html:3
-#: grc/templates/document-checker/start.html:10
-msgid "Before you start"
-msgstr "Cyn i chi ddechrau"
 
 #: grc/templates/document-checker/start.html:14
 msgid ""
