--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-01 12:44+0100\n"
+"POT-Creation-Date: 2024-05-01 13:56+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -358,6 +358,18 @@ msgstr "Nodwch ddyddiad yn y gorffennol"
 #: grc/business_logic/constants.py:90
 msgid "Enter a date at least 2 years before your application"
 msgstr "Nodwch ddyddiad o leiaf 2 o flynyddoedd cyn eich cais"
+
+#: grc/business_logic/constants.py:91
+msgid "Enter a day"
+msgstr "Nodwch ddiwrnod"
+
+#: grc/business_logic/constants.py:92
+msgid "Enter a day as a number between 1 and 31"
+msgstr "Nodwch ddiwrnod fel rhif rhwng 1 ac 31"
+
+#: grc/business_logic/constants.py:93
+msgid "Enter a date that does not precede your transition date"
+msgstr "Nodwch ddyddiad nad yw cyn dyddiad eich trawsnewidiad"
 
 #: grc/document_checker/constants.py:7
 msgid "Statutory declaration for applicants who are married"
@@ -1488,6 +1500,31 @@ msgstr "Enwau canol (dim ond os oes gennych enwau canol)"
 msgid "Last name"
 msgstr "Cyfenw"
 
+#: grc/templates/personal-details/statutory-declaration-date.html:7
+#: grc/templates/personal-details/statutory-declaration-date.html:27
+msgid "When did you sign your statutory declaration?"
+msgstr "Pryd wnaethoch chi arwyddo eich Datganiad Statudol?"
+
+#: grc/templates/personal-details/statutory-declaration-date.html:32
+msgid ""
+"Enter the date you signed your gender recognition statutory declaration "
+"in front of someone authorised to administer oaths."
+msgstr "Rhowch y dyddiad pan wnaethoch lofnodi eich datganiad statudol cydnabod rhywedd ym mhresenoldeb rhywun sydd wedi’i awdurdodi i weinyddu llwon."
+
+#: grc/templates/personal-details/statutory-declaration-date.html:53
+msgid "Day"
+msgstr "Diwrnod"
+
+#: grc/templates/personal-details/statutory-declaration-date.html:66
+#: grc/templates/personal-details/transition-date.html:56
+msgid "Month"
+msgstr "Mis"
+
+#: grc/templates/personal-details/statutory-declaration-date.html:79
+#: grc/templates/personal-details/transition-date.html:69
+msgid "Year"
+msgstr "Blwyddyn"
+
 #: grc/templates/personal-details/transition-date.html:7
 #: grc/templates/personal-details/transition-date.html:27
 msgid "When did you transition?"
@@ -1512,15 +1549,6 @@ msgid ""
 msgstr ""
 "Rhaid iddo fod o leiaf 2 flynedd cyn i chi gyflwyno’ch cais am Dystysgrif"
 " Cydnabod Rhywedd."
-
-#: grc/templates/personal-details/transition-date.html:56
-msgid "Month"
-msgstr "Mis"
-
-#: grc/templates/personal-details/transition-date.html:69
-#, fuzzy
-msgid "Year"
-msgstr "Blwyddyn"
 
 #: grc/templates/policies/accessibility-statement.html:3
 #, fuzzy
