--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-01 12:44+0100\n"
+"POT-Creation-Date: 2024-05-01 14:27+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -1496,6 +1496,15 @@ msgstr "Pryd wnaethoch chi drawsnewid o un rhywedd i’r llall?   "
 #: grc/templates/personal-details/transition-date.html:32
 msgid "Enter the month and year of your transition"
 msgstr "Rhowch fis a blwyddyn eich trawsnewidiad"
+
+#: grc/templates/personal-details/transition-date.html:33
+msgid ""
+"For example, this could be when you changed your name by deed poll, or "
+"when you told friends or family you were changing your gender"
+msgstr ""
+"Er enghraifft, gallai hyn fod yr adeg pan wnaethoch newid eich enw drwy "
+"weithred newid enw, neu pam ddywedoch wrth eich teulu neu ffrindiau eich "
+"bod yn newid eich rhywedd"
 
 #: grc/templates/personal-details/transition-date.html:34
 msgid ""
