--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-01 14:18+0100\n"
+"POT-Creation-Date: 2024-05-01 15:52+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -371,6 +371,34 @@ msgstr "Nodwch ddiwrnod fel rhif rhwng 1 ac 31"
 msgid "Enter a date that does not precede your transition date"
 msgstr "Nodwch ddyddiad nad yw cyn dyddiad eich trawsnewidiad"
 
+#: grc/business_logic/constants.py:94
+msgid "Enter your address"
+msgstr "Nodwch eich cyfeiriad"
+
+#: grc/business_logic/constants.py:95
+msgid "Enter your town or city"
+msgstr "Nodwch eich tref neu ddinas"
+
+#: grc/business_logic/constants.py:96
+msgid "Enter a valid address line one"
+msgstr "Nodwch gyfeiriad llinell un dilys"
+
+#: grc/business_logic/constants.py:97
+msgid "Enter a valid address line two"
+msgstr "Nodwch gyfeiriad llinell dau dilys"
+
+#: grc/business_logic/constants.py:98
+msgid "Enter a valid town"
+msgstr "Nodwch dref ddilys"
+
+#: grc/business_logic/constants.py:99
+msgid "Enter your postcode"
+msgstr "Nodwch eich cod post"
+
+#: grc/business_logic/constants.py:100
+msgid "Enter a valid postcode"
+msgstr "Nodwch god post dilys"
+
 #: grc/document_checker/constants.py:7
 msgid "Statutory declaration for applicants who are married"
 msgstr "Datganiad statudol ar gyfer ceiswyr sy’n briod"
@@ -468,8 +496,8 @@ msgid "Invalid email address."
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:87
-#: grc/utils/form_custom_validators.py:434
-#: grc/utils/form_custom_validators.py:453
+#: grc/utils/form_custom_validators.py:441
+#: grc/utils/form_custom_validators.py:460
 msgid "File does not have an approved extension: {extensions}"
 msgstr ""
 
@@ -1442,6 +1470,37 @@ msgstr "Yn ôl i’r rhestr tasgau"
 #: grc/templates/govuk-design-system-templates/error-summary.html:6
 msgid "There is a problem"
 msgstr "Mae yna broblem"
+
+#: grc/templates/personal-details/address.html:8
+#: grc/templates/personal-details/address.html:27
+msgid "What is your address?"
+msgstr "Beth yw eich cyfeiriad? "
+
+#: grc/templates/personal-details/address.html:31
+msgid ""
+"This should be the address that you want us to send your Gender "
+"Recognition Certificate to"
+msgstr "Dylech roi’r cyfeiriad yr ydych eisiau i ni ei ddefnyddio i anfon eich Tystysgrif Cydnabod Rhywedd iddo"
+
+#: grc/templates/personal-details/address.html:38
+msgid "Address line 1"
+msgstr "Llinell gyntaf y cyfeiriad"
+
+#: grc/templates/personal-details/address.html:47
+msgid "Address line 2 (optional)"
+msgstr "Ail linell y cyfeiriad (dewisol)"
+
+#: grc/templates/personal-details/address.html:56
+msgid "Town or city"
+msgstr "Tref neu ddinas"
+
+#: grc/templates/personal-details/address.html:66
+msgid "Country (optional)"
+msgstr "Gwlad (dewisol)"
+
+#: grc/templates/personal-details/address.html:75
+msgid "Postcode or zipcode"
+msgstr "Cod post neu god sip"
 
 #: grc/templates/personal-details/affirmed-gender.html:7
 #: grc/templates/personal-details/affirmed-gender.html:25
