--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-01 15:52+0100\n"
+"POT-Creation-Date: 2024-05-02 09:46+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -496,8 +496,8 @@ msgid "Invalid email address."
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:87
-#: grc/utils/form_custom_validators.py:441
-#: grc/utils/form_custom_validators.py:460
+#: grc/utils/form_custom_validators.py:442
+#: grc/utils/form_custom_validators.py:461
 msgid "File does not have an approved extension: {extensions}"
 msgstr ""
 
@@ -1459,14 +1459,17 @@ msgstr "Anfon y rhestr o ddogfennau drwy e-bost"
 msgid "Back"
 msgstr "Yn ôl"
 
+#: grc/templates/govuk-design-system-templates/continue.html:12
+msgid "Save and continue"
+msgstr "Cadw a pharhau"
+
+#: grc/templates/govuk-design-system-templates/continue.html:15
+msgid "Return to task list"
+msgstr "Yn ôl i’r rhestr tasgau"
+
 #: grc/templates/govuk-design-system-templates/error-summary.html:6
 msgid "There is a problem"
 msgstr "Mae yna broblem"
-
-#: grc/templates/personal-details/affirmed-gender.html:7
-#: grc/templates/personal-details/affirmed-gender.html:25
-msgid "What is your affirmed gender?"
-msgstr "Beth yw eich rhywedd a gadarnhawyd?"
 
 #: grc/templates/personal-details/address.html:8
 #: grc/templates/personal-details/address.html:27
@@ -1500,6 +1503,72 @@ msgstr "Gwlad (dewisol)"
 #: grc/templates/personal-details/address.html:75
 msgid "Postcode or zipcode"
 msgstr "Cod post neu god sip"
+
+#: grc/templates/personal-details/affirmed-gender.html:7
+#: grc/templates/personal-details/affirmed-gender.html:25
+msgid "What is your affirmed gender?"
+msgstr "Beth yw eich rhywedd a gadarnhawyd?"
+
+#: grc/templates/personal-details/affirmed-gender.html:29
+msgid "This will appear on your Gender Recognition Certificate."
+msgstr "Bydd hwn yn ymddangos ar eich Tystysgrif Cydnabod Rhywedd."
+
+#: grc/templates/personal-details/name.html:7
+#: grc/templates/personal-details/name.html:26
+msgid "What is your name?"
+msgstr "Beth yw eich enw?"
+
+#: grc/templates/personal-details/name.html:30
+msgid ""
+"Enter your name exactly as it appears on either your latest change of "
+"name document or your birth certificate"
+msgstr ""
+"Rhowch eich enw yn union fel y mae’n ymddangos ar naill ai eich dogfen "
+"newid enw ddiweddaraf neu eich tystysgrif geni"
+
+#: grc/templates/personal-details/name.html:33
+msgid "This will appear in full on your Gender Recognition Certificate"
+msgstr "Bydd hwn i’w weld yn llawn ar eich Tystysgrif Cydnabod Rhywedd"
+
+#: grc/templates/personal-details/name.html:36
+msgid ""
+"If you want to use a different name from your birth certificate or change"
+" of name document, you should"
+msgstr ""
+"Os ydych eisiau defnyddio enw gwahanol o’ch tystysgrif geni neu ddogfen "
+"newid enw, dylech"
+
+#: grc/templates/personal-details/name.html:39
+msgid "change your name by deed poll (opens in a new tab)"
+msgstr "newid eich enw drwy weithred newid enw (yn agor mewn tab newydd)"
+
+#: grc/templates/personal-details/name.html:41
+msgid "before you apply for a Gender Recognition Certificate"
+msgstr "cyn i chi wneud cais am Dystysgrif Cydnabod Rhywedd"
+
+#: grc/templates/personal-details/name.html:48
+msgid "Title"
+msgstr "Teitl"
+
+#: grc/templates/personal-details/name.html:49
+msgid ""
+"For internal use only. This will not appear on your Gender Recognition "
+"Certificate."
+msgstr ""
+"At ddefnydd mewnol yn unig. Ni fydd hwn yn ymddangos ar eich Tystysgrif "
+"Cydnabod Rhywedd."
+
+#: grc/templates/personal-details/name.html:59
+msgid "First name"
+msgstr "Enw cyntaf"
+
+#: grc/templates/personal-details/name.html:69
+msgid "Middle names (only required if you have middle names)"
+msgstr "Enwau canol (dim ond os oes gennych enwau canol)"
+
+#: grc/templates/personal-details/name.html:79
+msgid "Last name"
+msgstr "Cyfenw"
 
 #: grc/templates/personal-details/previous-names-check.html:23
 msgid "You will need to upload documents that show this"
@@ -1540,6 +1609,15 @@ msgstr "Pryd wnaethoch chi drawsnewid o un rhywedd i’r llall?   "
 #: grc/templates/personal-details/transition-date.html:32
 msgid "Enter the month and year of your transition"
 msgstr "Rhowch fis a blwyddyn eich trawsnewidiad"
+
+#: grc/templates/personal-details/transition-date.html:33
+msgid ""
+"For example, this could be when you changed your name by deed poll, or "
+"when you told friends or family you were changing your gender"
+msgstr ""
+"Er enghraifft, gallai hyn fod yr adeg pan wnaethoch newid eich enw drwy "
+"weithred newid enw, neu pam ddywedoch wrth eich teulu neu ffrindiau eich "
+"bod yn newid eich rhywedd"
 
 #: grc/templates/personal-details/transition-date.html:34
 msgid ""
@@ -2753,85 +2831,4 @@ msgstr "Byddwch angen eich cyfeirnod i ddychwelyd i’ch cais"
 #: grc/templates/start-application/reference-number.html:27
 msgid "Keep a record of it – it can't be recovered if you lose it"
 msgstr "Cadwch gofnod ohono - ni allwch ei gael yn ôl os byddwch yn ei golli"
-
-#~ msgid ""
-#~ "If you have changed your name more"
-#~ " than once, we will need to see"
-#~ " documents for each instance."
-#~ msgstr ""
-#~ "Os ydych wedi newid eich enw fwy"
-#~ " nag unwaith, bydd angen i ni "
-#~ "weld dogfennau ar gyfer pob achos"
-
-#~ msgid ""
-#~ "We ask for this so we can "
-#~ "match your birth records after you "
-#~ "receive a Gender Recognition Certificate."
-#~ msgstr ""
-#~ "Gofynnwn am hyn fel y gallwn eu"
-#~ " cyfateb i'ch cofnodion geni ar ôl"
-#~ " i chi gael Tystysgrif Cydnabod "
-#~ "Rhywedd"
-
-#~ msgid "Save and continue"
-#~ msgstr "Cadw a pharhau"
-
-#~ msgid "Return to task list"
-#~ msgstr "Yn ôl i’r rhestr tasgau"
-
-#~ msgid "This will appear on your Gender Recognition Certificate."
-#~ msgstr "Bydd hwn yn ymddangos ar eich Tystysgrif Cydnabod Rhywedd."
-
-#~ msgid "What is your name?"
-#~ msgstr "Beth yw eich enw?"
-
-#~ msgid ""
-#~ "Enter your name exactly as it "
-#~ "appears on either your latest change "
-#~ "of name document or your birth "
-#~ "certificate"
-#~ msgstr ""
-#~ "Rhowch eich enw yn union fel y "
-#~ "mae’n ymddangos ar naill ai eich "
-#~ "dogfen newid enw ddiweddaraf neu eich"
-#~ " tystysgrif geni"
-
-#~ msgid "This will appear in full on your Gender Recognition Certificate"
-#~ msgstr "Bydd hwn i’w weld yn llawn ar eich Tystysgrif Cydnabod Rhywedd"
-
-#~ msgid ""
-#~ "If you want to use a different "
-#~ "name from your birth certificate or "
-#~ "change of name document, you should"
-#~ msgstr ""
-#~ "Os ydych eisiau defnyddio enw gwahanol"
-#~ " o’ch tystysgrif geni neu ddogfen "
-#~ "newid enw, dylech"
-
-#~ msgid "change your name by deed poll (opens in a new tab)"
-#~ msgstr "newid eich enw drwy weithred newid enw (yn agor mewn tab newydd)"
-
-#~ msgid "before you apply for a Gender Recognition Certificate"
-#~ msgstr "cyn i chi wneud cais am Dystysgrif Cydnabod Rhywedd"
-
-#~ msgid "Title"
-#~ msgstr "Teitl"
-
-#~ msgid ""
-#~ "For internal use only. This will "
-#~ "not appear on your Gender Recognition"
-#~ " Certificate."
-#~ msgstr ""
-#~ "At ddefnydd mewnol yn unig. Ni "
-#~ "fydd hwn yn ymddangos ar eich "
-#~ "Tystysgrif Cydnabod Rhywedd."
-
-#~ msgid "First name"
-#~ msgstr "Enw cyntaf"
-
-#~ msgid "Middle names (only required if you have middle names)"
-#~ msgstr "Enwau canol (dim ond os oes gennych enwau canol)"
-
-#~ msgid "Last name"
-#~ msgstr "Cyfenw"
 
