--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-02 11:29+0100\n"
+"POT-Creation-Date: 2024-05-02 15:42+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -374,7 +374,7 @@ msgid "'To' date is in the past"
 msgstr ""
 
 #: grc/business_logic/constants.py:98
-msgid "'From' date is after the 'To' date'"
+msgid "'From' date is after the 'To' date"
 msgstr ""
 
 #: grc/business_logic/constants.py:99
