--- a/messages.pot
+++ b/messages.pot
@@ -1530,7 +1530,7 @@ msgstr ""
 #: grc/templates/partnership-details/current-check.html:37
 msgid ""
 "If you are in the process of ending, or you plan to end your marriage or "
-"civil partnership, you should select your current, legal status"
+"civil partnership, you should select your current legal status"
 msgstr ""
 
 #: grc/templates/partnership-details/partner-agrees.html:7
